# rust-learning-gateway

./: README.md
gateway/: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yaml
gateway/src/: config.rs  device.rs  dispatcher.rs  lib.rs  lifecycle.rs  main.rs  mqtt.rs
gateway/src/adapters/: mod.rs  spawn_service.rs
gateway/src/adapters/api/: mod.rs
gateway/src/adapters/modbus/: mod.rs
gateway/src/adapters/mqtt/: mod.rs
gateway/src/adapters/simulation/: mod.rs
gateway/src/api/: mod.rs
gateway/src/core/: bootstrap.rs  device.rs  dispatcher.rs  dispatcher_tests.rs  events.rs  mod.rs  state.rs  state_tests.rs
gateway/src/logging/: mod.rs
gateway/src/modbus/: mod.rs
gateway/src/mqtt/: mod.rs
gateway/src/state/: mod.rs
gateway/tests/: api_endpoints.rs  dispatcher_tests.rs  integration_tests.rs
iot_platform/gateway/: .dockerignore  Cargo.toml  Dockerfile  README.md  config.toml  modbus.json
iot_platform/gateway/src/: config.rs  main.rs
iot_platform/gateway/src/adapters/: mod.rs
iot_platform/gateway/src/core/: bootstrap.rs  device.rs  dispatcher.rs  events.rs  state.rs  state_tests.rs
iot_platform/gateway/src/logging/: mod.rs
iot_platform/gateway/tests/: api_endpoints.rs  dispatcher_tests.rs  integration_tests.rs
iot_platform/telemetry/: Cargo.toml  Dockerfile  README.md
iot_platform/telemetry/db/init/: init.sql
iot_platform/telemetry/docs/adr/: 001-device-auto-creation.md  002-device-reactivation.md
iot_platform/telemetry/docs/architecture/: architecture-diagram.dot  (+3 more)
iot_platform/telemetry/src/: lib.rs  main.rs
(+88 files in other folders)
