[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = "0.4"
rand = "0.9.2"
rumqttc = "0.24"
serde = {version="1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tokio =  { version = "1.48.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
