[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_models = { path = "../shared_models" }
anyhow = "1.0.100"
async-trait = "0.1"
axum = "0.8.7"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.2"
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio =  { version = "1.48.0", features = ["full"] }
tokio-modbus = "0.17.0"
toml = "0.8"
tower = "0.5.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[profile.release]
lto = true
codegen-units = 1
strip = true
