[package]
name = "telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_models = { path = "../shared_models" }
chrono = "0.4.44"
dotenv = "0.15"
rumqttc = "0.24"
serde_json = "1.0.145"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
